added sorting in projects, started working on editing task groups and AOP